--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
       </div>
       <div class="profile-wrap reveal">
         <!-- Replace this with your real profile image -->
-        <img class="profile-pic" src="C:\Users\ishwa\OneDrive\Pictures\Documents\profile img.jpg" alt="Profile of Ishwari Khutikar">
+        <img class="profile-pic" src="img/profile img.jpg" alt="Profile of Ishwari Khutikar">
       </div>
     </div>
   </header>
@@ -394,7 +394,7 @@
           </ul>
           <p><strong>Tech Stack:</strong> Django, Python, HTML, CSS, SQLite</p>
           <!-- Replace with your real screenshot -->
-          <img class="project-img" src="C:\Users\ishwa\OneDrive\Pictures\Screenshots\Screenshot 2025-07-27 183750.png" alt="Campaign Portal Screenshot">
+          <img class="project-img" src="img/Screenshot 2025-07-27 183750.png" alt="Campaign Portal Screenshot">
         </article>
 
         <!-- Library Management System -->
@@ -410,7 +410,7 @@
           </ul>
           <p><strong>Tech Stack:</strong> Java (Swing), MySQL</p>
           <!-- Replace with your real screenshot -->
-          <img class="project-img" src="C:\Users\ishwa\OneDrive\Pictures\Screenshots\Screenshot 2025-07-27 180447.png" alt="Library Management System Screenshot">
+          <img class="project-img" src="img/Screenshot 2025-07-27 180447.png" alt="Library Management System Screenshot">
         </article>
       </div>
     </div>
